<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ro.pontes.connectfour.MainActivity">

    <item
        android:id="@+id/mnuCfLevel"
        android:orderInCategory="100"
        android:title="@string/mnu_difficulty_level"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/mnuGameType"
        android:orderInCategory="150"
        android:title="@string/mnu_game_type"
        app:showAsAction="never" />
    <item
        android:id="@+id/mnuNickname"
        android:orderInCategory="300"
        android:title="@string/mnu_nickname"
        app:showAsAction="never" />
    <item
        android:id="@+id/mnuSettings"
        android:orderInCategory="500"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/mnuStatistics"
        android:orderInCategory="800"
        android:title="@string/mnu_statistics"
        app:showAsAction="never" />
    <item
        android:id="@+id/mnuRate"
        android:orderInCategory="900"
        android:title="@string/mnu_rate"
        app:showAsAction="never" />
    <item
        android:id="@+id/mnuAbout"
        android:orderInCategory="1000"
        android:title="@string/mnu_about"
        app:showAsAction="never" />

</menu>