<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="false"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cbtSpeechSetting"
                style="@style/style_check_boxes_in_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/enable_speech" />

            <CheckBox
                android:id="@+id/cbtSoundsSetting"
                style="@style/style_check_boxes_in_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/enable_sounds" />

            <CheckBox
                android:id="@+id/cbtMusicSetting"
                style="@style/style_check_boxes_in_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/enable_music" />

            <CheckBox
                android:id="@+id/cbtPortraitOrientationSetting"
                style="@style/style_check_boxes_in_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/enable_portrait_orientation" />

            <CheckBox
                android:id="@+id/cbtScreenAwakeSetting"
                style="@style/style_check_boxes_in_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/enable_screen_awake" />

            <!-- Reset the game to its defaults: -->

            <Button
                android:id="@+id/btResetDefaults"
                style="@style/style_check_boxes_in_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="resetToDefaults"
                android:text="@string/bt_reset_to_defaults" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>